# Boo

./: .gitignore  404.html  Boo.ipynb  Boo.py  Booger.py  Data.py  Dockerfile  FileSys.py  LICENSE  README.md  THEME_INSTALL.md  __init__.py  agents.py  app.py  boo.py  boogr.py  bro.py  budgetml.ipynb  config.py  data.py  dbops.py  dbs.py  dibs.py  email.py  enums.py  errors.py  execution.ipynb  foo.py  forms.py  fsys.py  gemini.py  gemma.py  gemni.py  gpt.py  grok.py  groq.py  guro.py  index.html  jeni.py  jenni.py  (+14 more)
.devcontainer/: devcontainer.json
.streamlit/: config.toml
app/: index.html
architecture/: index.html
boogr/: __init__.py  minion.py  static.py
configuration/: index.html
db/: stopwords.txt
docs/: app.md  architecture.md  configuration.md  gemini.md  getting-started.md  gpt.md  grok.md  index.md  quickstart.md  user-guide.md
etc/: reload_modules.txt
gemini/: index.html
getting-started/: index.html
grok/: index.html
ipynb/: BalanceEstimator.ipynb  Boo.ipynb  Booget.ipynb  GPT.ipynb  balances.ipynb  boo.ipynb  chains.ipynb  chonk.ipynb  chonky.ipynb  chromadb.ipynb  fettr.ipynb  gemy.ipynb  gpt.ipynb  groq.ipynb  langchain.ipynb  machinery.ipynb  models.ipynb  oai.ipynb  openai.ipynb  outlays.ipynb  pcone.ipynb  tidy.ipynb  tiggr.ipynb  usecases.ipynb
main/: __init__.py  controls.py  errors.py  views.py  webconfig.py
mathy/: clusters.py  data.py  models.py
resources/: reload_modules.txt
search/: search_index.json
src/: Audio.py  Boo.py  Booger.py  Chaingle.py  FileSys.py  GUI.py  GptOptions.py  GptQuery.py  Messages.py  Parameters.py  Payloads.py  Requests.py  (+39 more)
(+231 files in other folders)
